Add update endpoint
